tests/baselines/reference/higherKindedTypesLift3.errors.txt
tests/cases/compiler/higherKindedTypesLift3.ts(26,40): error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'string[]'.
  Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/higherKindedTypesLift3.ts (1 errors) ====
    interface StaticFunctor<CS<_TS>> {
        <AS, BS>(csas: CS<AS>, fmapstatic: (a: AS) => BS): CS<BS>;
    }
    
    
    interface LiftedResult<LC<_LT>> {
        <LA, LB>(lmap: (a: LA) => LB): (a: LC<LA>) => LC<LB>;
    }
    
    declare function lift<C<_T>>(fToLift: StaticFunctor<C>): LiftedResult<C>
    
    
    declare const myArrayFunctor: StaticFunctor<Array>
    
    const liftedArray = lift(myArrayFunctor);
    
    declare function stringLength(strarg: string): number
    
    const liftedStringLength = liftedArray(stringLength);
    
    declare const arrayOfStrings: Array<string>;
    
    const result = liftedStringLength(arrayOfStrings);
    const expectedType: Array<number> = result;
    
    const expectError = liftedStringLength(result)
                                           ~~~~~~
!!! error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'string[]'.
!!! error TS2345:   Type 'number' is not assignable to type 'string'.
    
    